Add roles to auth
