# docs/swagger.json
@@ -37,49 +37,6 @@
                 }
             }
         },
-        "/api/v1/members/": {
-            "post": {
-                "description": "Registration a member",
-                "consumes": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Members"
-                ],
-                "summary": "Registration a member",
-                "parameters": [
-                    {
-                        "description": "member",
-                        "name": "Request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/dto.MemberCreate"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Success",
-                        "schema": {
-                            "$ref": "#/definitions/components.BaseHttpResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Failed",
-                        "schema": {
-                            "$ref": "#/definitions/components.BaseHttpResponse"
-                        }
-                    },
-                    "409": {
-                        "description": "Failed",
-                        "schema": {
-                            "$ref": "#/definitions/components.BaseHttpResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/api/v1/members/login": {
             "post": {
                 "description": "Login a member",
@@ -103,6 +60,49 @@
                 ],
                 "responses": {
                     "200": {
+                        "description": "Success",
+                        "schema": {
+                            "$ref": "#/definitions/components.BaseHttpResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Failed",
+                        "schema": {
+                            "$ref": "#/definitions/components.BaseHttpResponse"
+                        }
+                    },
+                    "409": {
+                        "description": "Failed",
+                        "schema": {
+                            "$ref": "#/definitions/components.BaseHttpResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/members/register": {
+            "post": {
+                "description": "Registration a member",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Members"
+                ],
+                "summary": "Registration a member",
+                "parameters": [
+                    {
+                        "description": "member",
+                        "name": "Request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.MemberRegistration"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
                         "description": "Success",
                         "schema": {
                             "$ref": "#/definitions/components.BaseHttpResponse"
@@ -363,7 +363,7 @@
                 }
             }
         },
-        "dto.MemberCreate": {
+        "dto.MemberRegistration": {
             "type": "object",
             "required": [
                 "password"
@@ -436,8 +436,10 @@
         }
     },
     "securityDefinitions": {
-        "BasicAuth": {
-            "type": "basic"
+        "AuthBearer": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     },
     "externalDocs": {
